--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="attribution">
                   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-                  Coded by <a href="#">Favour Adebisi .M</a>.
+                  Coded by <a href="#">Favour Adebisi M</a>.
                 </div>
             </div>
           </div>
